# standard-sauce

./: CMakeLists.txt  sauce.hpp
tests/: CMakeLists.txt  main-tests.cpp  ptr-tests.cpp  static-vector-tests.cpp
